# realworld-axum-sqlx

./: Cargo.toml  README.md  docker-compose.yaml
.github/workflows/: rust.yml
src/http/: extractor.rs  mod.rs  profiles.rs  types.rs
src/http/articles/: listing.rs  mod.rs
src/http/articles/fixtures/: article.sql  user.sql  users.sql
